<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/content_description_scrollview">

    <LinearLayout
        android:id="@+id/linearLayout_mainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="198dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/img_main"
            app:srcCompat="@drawable/img_main" />

        <TextView
            android:id="@+id/vwUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_nombre"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vwFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_apellido"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vwLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ddl_sexo"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vwGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_fecha"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vwBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ddl_pais"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vwCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ddl_estado"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vwState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_direccion"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vwAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_tele"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vwPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_correo"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vwEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_salir" />

    </LinearLayout>
</ScrollView>