<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout_registrationFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".RegistrationFragment">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="160dp"
            android:layout_height="196dp"
            android:layout_gravity="center"
            android:contentDescription="@string/img_registration"
            android:src="@drawable/img_registration" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/txt_nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/txtLast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/txt_apellido"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/ddl_sexo"
            android:minHeight="48dp">

            <AutoCompleteTextView
                android:id="@+id/ddlGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColorHint="#757575"></AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/txt_fecha"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/ddl_pais"
            android:minHeight="48dp">

            <AutoCompleteTextView
                android:id="@+id/ddlCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColorHint="#757575"></AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/ddl_estado"
            android:minHeight="48dp">

            <AutoCompleteTextView
                android:id="@+id/ddlState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColorHint="#757575"></AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/txt_direccion"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:digits="0123456789+"
            android:ems="10"
            android:hint="@string/txt_tele"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/txt_correo"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/txt_pass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/txtPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/txt_pass_2"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/btnSaveRegistration"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_save" />
    </LinearLayout>

</ScrollView>