<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_passRecoveryFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PassRecoveryFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="221dp"
                android:layout_height="299dp"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:layout_weight="0"
                android:contentDescription="@string/img_pass_recovery"
                android:src="@drawable/img_pass_recovery" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="0"
                android:text="@string/str_pass_recovery_title"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="0"
                android:text="@string/str_pass_recovery_message"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/txt_correo"
                android:inputType="text|textEmailAddress"
                android:minHeight="50dp" />

            <Button
                android:id="@+id/btnRecoverPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="35dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="0"
                android:text="@string/str_pass_recovery_btn_message" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>